# IssueIndex-v2

./: .dockerignore  .env.example  .gitignore  package-lock.json
apps/backend/: pyproject.toml  pytest.ini  requirements.txt
apps/backend/gim_backend/: main.py
apps/backend/gim_backend/api/: dependencies.py
apps/backend/gim_backend/core/: __init__.py  audit.py  config.py  cookies.py  errors.py  oauth.py  redis.py  security.py
apps/backend/gim_backend/ingestion/: __init__.py  content_hash.py  embeddings.py  gatherer.py  janitor.py  nomic_moe_embedder.py  persistence.py  pubsub_consumer.py  pubsub_producer.py  pubsub_repo_producer.py  quality_gate.py  rate_limiter.py  scout.py  staging_persistence.py  survival_score.py
apps/backend/gim_backend/middleware/: __init__.py  auth.py  context.py  rate_limit.py  security_headers.py
apps/backend/gim_backend/services/: bookmark_service.py  cloud_tasks_service.py  embedding_service.py  feed_service.py  github_profile_service.py  issue_service.py  linked_account_service.py  onboarding_service.py  profile_access.py  profile_core_service.py  profile_embedding_service.py  profile_intent_service.py  profile_models.py  profile_preferences_service.py  profile_service.py  profile_validation.py  recommendation_event_service.py  recommendation_preview_service.py  repository_service.py  resume_parsing_service.py  risk_assessment.py  search_cache.py  search_execution.py  search_models.py  search_schema_probe.py  search_service.py  search_sql.py  session_service.py  stats_service.py  taxonomy_service.py  vector_generation.py  why_this_service.py
apps/backend/gim_backend/workers/: __init__.py  embed_worker.py  resume_worker.py
apps/backend/src/: main.py
apps/backend/src/api/: dependencies.py
apps/backend/src/core/: __init__.py  audit.py  config.py  cookies.py  errors.py  oauth.py  redis.py  security.py
apps/backend/src/ingestion/: embeddings.py  gatherer.py  gcs_storage.py  github_client.py  janitor.py  nomic_moe_embedder.py  persistence.py  pubsub_consumer.py  pubsub_producer.py  quality_gate.py  scout.py  survival_score.py  vertex_batch.py
apps/backend/src/middleware/: auth.py  context.py  rate_limit.py
apps/backend/src/services/: bookmark_service.py  cloud_tasks_service.py  embedding_service.py  feed_service.py  github_profile_service.py  linked_account_service.py  onboarding_service.py  profile_embedding_service.py  profile_service.py  recommendation_event_service.py  recommendation_preview_service.py  repository_service.py  resume_parsing_service.py  retry_queue.py  risk_assessment.py  search_cache.py  search_service.py  session_service.py  stats_service.py  (+3 more)
apps/backend/tests/: conftest.py
apps/workers/: pyproject.toml  pytest.ini
apps/workers/gim_workers/: __init__.py  __main__.py  config.py  health.py  logging_config.py
apps/workers/src/: __init__.py  __main__.py  config.py  health.py  logging_config.py
apps/workers/tests/: __init__.py  conftest.py  test_gatherer_job.py  test_gatherer_worker.py  test_janitor_job.py  test_main.py  test_scout_job.py
(+202 files in other folders)
