[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gim-workers"
version = "0.1.0"
description = "Data ingestion and maintenance workers for IssueIndex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # HTTP Client for GitHub GraphQL
    "httpx>=0.27.0",
    
    # Configuration
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Note: Install internal deps first with:
    # pip install -e ../../packages/database -e ../../packages/shared -e ../backend
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]
redis = [
    # Optional: for distributed rate limiting
    "redis>=5.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
